Fixed bad access to shared cache (now treating objects returned as readonly) Fixed layout issues with youtube clip-titles Added localization on title text display

--- a/src/main/resources/se/microcode/google-plugin/youtube/style.css
+++ b/src/main/resources/se/microcode/google-plugin/youtube/style.css
@@ -57,6 +57,11 @@
     width: 120px;
 }
 
+.se-microcode_youtube-playlist-video-info-full
+{
+    font-weight: bold;
+}
+
 .se-microcode_youtube-playlist-video-desc
 {
 }
